--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -19,20 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Silver.ttf")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/CornerTile.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Sprites/", "res://Sprites/Environment/", "res://Scripts/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Magik/menu.tscn", "res://Magik/options_menu.tscn", "res://environment.tscn")
-current_scene="res://environment.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Magik/menu.tscn", "res://environment.tscn", "res://tile_map.tscn")
+current_scene="res://main.tscn"
 center_split_offset=-202
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
 
 [ScriptEditor]
 
@@ -50,10 +49,10 @@ selected_shader=""
 
 [editor_log]
 
-log_filter_0=true
-log_filter_2=true
-log_filter_1=false
+log_filter_0=false
+log_filter_2=false
+log_filter_1=true
 log_filter_3=true
-log_filter_4=true
+log_filter_4=false
 collapse=false
 show_search=true
