--- a/Game/.godot/editor/script_editor_cache.cfg
+++ b/Game/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 94,
-"scroll_position": 82.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 85,
-"selection_to_column": 26,
-"selection_to_line": 94,
+"row": 22,
+"scroll_position": 9.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -183,11 +179,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 11.0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
