--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Magik/menu.tscn", "res://Magik/options_menu.tscn", "res://Enemy.tscn", "res://UI/menu.tscn", "res://Scenes/falling_spikes.tscn")
-current_scene="res://Scenes/main_char.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Magik/menu.tscn", "res://Magik/options_menu.tscn", "res://Enemy.tscn", "res://UI/menu.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn")
+current_scene="res://main.tscn"
 center_split_offset=-202
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Area2D.gd", "res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://Enemy.gd", "res://global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
-selected_script="res://Scripts/Character.gd"
+selected_script="res://Enemy.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
