--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -21,24 +21,24 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://Enemy.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Sprites/Environment/", "res://Sprites/Characters/")
-dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/menu.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://popup.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Magik/menu.tscn", "res://Magik/options_menu.tscn", "res://Enemy.tscn", "res://UI/menu.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn")
-current_scene="res://Enemy.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://Scenes/Inventory.tscn", "res://Magik/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Magik/menu.tscn", "res://Magik/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn")
+current_scene="res://Scenes/flower.tscn"
 center_split_offset=-202
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
 open_scripts=["res://Area2D.gd", "res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://Enemy.gd", "res://global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd", "res://Surface.gd"]
-selected_script="res://Enemy.gd"
+selected_script="res://popup.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
