--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -14,6 +14,8 @@ Button:scale=true
 Label:scale=true
 ProgressBar:scale=true
 Sprite2D:scale=true
+CanvasLayer:scale=true
+MarginContainer:scale=true
 
 [editor_metadata]
 
