--- a/Game/.godot/editor/script_editor_cache.cfg
+++ b/Game/.godot/editor/script_editor_cache.cfg
@@ -44,20 +44,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Surface.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 39,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/damaging.gd]
 
 state={
@@ -160,7 +146,21 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Area2D.gd]
+[res://global.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Area2D.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -174,7 +174,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Enemy.gd]
+[res://Scripts/Enemy.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -183,20 +183,6 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://global.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 2,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
