--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -20,8 +20,8 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://Enemy.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scenes/", "res://Magik/")
-dock_filesystem_selected_paths=PackedStringArray("res://Magik/in game background.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Characters/", "res://Scenes/", "res://Magik/")
+dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
