--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Grass.tscn", "res://Scenes/flower.tscn", "res://Scenes/Inventory.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://healthbar.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn")
-current_scene="res://main.tscn"
-center_split_offset=-202
+current_scene="res://environments.tscn"
+center_split_offset=-398
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_bottom_panel_item=11
 
 [ScriptEditor]
 
