--- a/Game/.godot/editor/script_editor_cache.cfg
+++ b/Game/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 130,
-"scroll_position": 150.0,
+"scroll_position": 123.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -86,11 +86,7 @@ state={
 "h_scroll_position": 0,
 "row": 8,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 8,
-"selection_to_column": 66,
-"selection_to_line": 8,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
