--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -21,7 +21,7 @@ TextureRect:scale=true
 
 [editor_metadata]
 
-executable_path="C:/Users/tanus/Downloads/Godot_v4.2-stable_win64.exe/Godot_v4.2-stable_win64.exe"
+executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
 tile_snap_option=0
 tile_snap_subdiv=4.0
 tile_source_sort=0
