--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -22,6 +22,7 @@ ParallaxBackground:scroll_base_scale=true
 ParallaxBackground:scale=true
 ParallaxLayer:motion_scale=true
 ParallaxLayer:scale=true
+MultiNodeEdit:scale=true
 
 [editor_metadata]
 
