--- a/Game/.godot/editor/project_metadata.cfg
+++ b/Game/.godot/editor/project_metadata.cfg
@@ -23,6 +23,7 @@ ParallaxBackground:scale=true
 ParallaxLayer:motion_scale=true
 ParallaxLayer:scale=true
 MultiNodeEdit:scale=true
+MultiNodeEdit:motion_scale=true
 
 [editor_metadata]
 
