--- a/Game/.godot/editor/script_editor_cache.cfg
+++ b/Game/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 0.0,
+"row": 160,
+"scroll_position": 151.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -81,16 +81,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 13,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 33,
-"selection_from_line": 8,
-"selection_to_column": 65,
-"selection_to_line": 8,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -141,10 +137,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 19,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -173,7 +169,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 56,
-"scroll_position": 0.0,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
