--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -21,19 +21,19 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://Enemy.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Sprites/Environment/", "res://Sprites/Environment/background layers/", "res://Sprites/Characters/", "res://Scenes/")
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/Environment/in game background.png")
+dock_filesystem_selected_paths=PackedStringArray()
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/Inventory.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn", "res://background.tscn", "res://death_screen.tscn")
-current_scene="res://background.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn", "res://background.tscn", "res://death_screen.tscn")
+current_scene="res://main.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
