--- a/Game/.godot/editor/script_editor_cache.cfg
+++ b/Game/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 66,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 174,
-"scroll_position": 154.0,
+"row": 101,
+"scroll_position": 60.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,16 +45,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 5,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 3,
-"selection_to_column": 2,
-"selection_to_line": 3,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -169,16 +165,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 11,
-"selection_from_line": 6,
-"selection_to_column": 13,
-"selection_to_line": 6,
+"row": 46,
+"scroll_position": 36.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
