--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://Enemy.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/Environment/background layers/", "res://Scenes/")
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/menu.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn", "res://background.tscn", "res://Scenes/death_screen.tscn", "res://Scenes/Inventory.tscn")
-current_scene="res://Enemy.tscn"
+current_scene="res://Scenes/death_screen.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Area2D.gd", "res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://Scripts/Enemy.gd", "res://Scripts/global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd"]
-selected_script="res://Scripts/Enemy.gd"
+open_scripts=["res://Scripts/Area2D.gd", "res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://Scenes/death_screen.gd", "res://Scripts/Enemy.gd", "res://Scripts/global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd"]
+selected_script="res://Scenes/death_screen.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
